@@ -1,5 +1,9 @@
 Change log for python-messaging
 
+X.X	Wed Jun 20 2012
+        * adding redis message queue support
+        * [mp] fixing bug in default value
+
 0.9	Mon Jun 11 2012
 	* [mp] fixing bug in size method
 
